[package]
name = "discord-bot"
version = "0.1.0"
authors = ["Steven Kotwal <steve@pnada.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "0.2", features = ["macros"] }
kankyo = "0.3.0"
